--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1045,13 +1045,15 @@ footer h5 {
   position: relative;
 }
 
-.banner-event-1 {
+/* event */
+
+.banner-event {
   background-color: #f8f9fa;
-  padding: 30px 0;
+  margin: 30px 0;
   border-radius: 10px;
 }
 
-.banner-event-1 img {
+.banner-event img {
   width: 100%;
   border-radius: 10px;
 }
