--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -522,6 +522,11 @@ footer h5 {
   color: #000;
   color: green;
 }
+
+/* payment */
+.bg-payment{
+  background-color: #f0ffeb;
+}
 /* Default: small screens → bottom */
 .toast-position {
   bottom: 0;
@@ -859,6 +864,27 @@ footer h5 {
   border: none;
 }
 
+/* Remove number input spinners */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+/* PIN input styling */
+.pin-input {
+  width: 60px;
+  height: 60px;
+  font-size: 1.5rem;
+  text-align: center;
+  border: 2px solid #198754; /* Bootstrap success color */
+  border-radius: 0.5rem;
+}
+
 /* =========================================
    7. ABOUT PAGE
 ========================================= */
@@ -957,6 +983,7 @@ footer h5 {
 /* kropum */
 /* be_eco */
 
+.text-p4p,
 .text-eco {
   border-bottom: 2px solid #28a745;
   padding-bottom: 5px;
@@ -1003,9 +1030,9 @@ footer h5 {
   transition: transform 0.3s;
 }
 
-.card:hover {
+/* .card:hover {
   transform: translateY(-5px);
-}
+} */
 
 .checklist ul {
   list-style: none;
@@ -1094,4 +1121,29 @@ footer h5 {
 
 .btn-cta {
   margin: 5px 5px 15px 0;
+}
+
+/* used.html */
+
+/* Styled tabs */
+.nav-tabs .nav-link {
+  border-radius: 50px;
+  padding: 10px 25px;
+  margin: 0 5px;
+  font-weight: 500;
+  color: #333 !important;
+  transition: all 0.3s ease;
+}
+
+.nav-tabs .nav-link:hover {
+  background-color: #e0f2e9 !important;
+  color: #27ae60 !important;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1) !important;
+}
+
+.nav-tabs .nav-link.active {
+  background-color: #27ae60 !important;
+  color: #fff !important;
+  font-weight: 600;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2) !important;
 }
