--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: "Hanuman", Roboto !important;
+  overflow-x: hidden;
 }
 
 .bg-nav {
@@ -808,7 +809,7 @@ footer h5 {
    2. PAGE BACKGROUNDS
 ========================================= */
 .register-page {
-  background-image: url(../chhorng/img/pexel-leaf.jpg);
+  background-image: url(../image/chhorng/pexel-leaf.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -816,7 +817,7 @@ footer h5 {
 }
 
 .signin-page {
-  background-image: url(../chhorng/img/s-lake.jpg);
+  background-image: url(../image/chhorng/s-lake.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
